# communication_netmanager_base

./: .clang-format  .gitignore  @ohos.net.connection.abc  CMakeLists.txt  Cargo.toml  LICENSE  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  diff.patch  hisysevent.yaml  netmanager_base_config.gni  ohos.build
bpf/: zly.txt
frameworks/cj/connection/: BUILD.gn
frameworks/cj/statistics/: BUILD.gn
frameworks/native/netmanagernative/: BUILD.gn  dhcp_result_parcel.cpp  dnsresolver_params_parcel.cpp  net_conn_info.cpp  net_diag_callback_stub.cpp  net_ip_mac_info.cpp  net_port_states_info.cpp  netd_addr_info_parcel.cpp  netd_native_service_proxy.cpp  netd_native_service_proxy.h  netfirewall_callback_proxy.cpp  netfirewall_parcel.cpp  netsys_addr_info_parcel.cpp  netsys_addr_info_parcel.cpp.bak  netsys_native_service_proxy.cpp  netsys_native_service_proxy.h  netsys_net_diag_data.cpp  notify_callback_proxy.cpp  notify_callback_proxy.h  notify_callback_stub.cpp  route_type.cpp  socket_permission.cpp  uid_range.cpp
interfaces/innerkits/netconnclient/: BUILD.gn  connect_blocklist.txt  libnetconn_kits.map
interfaces/innerkits/netstatsclient/: BUILD.gn  INetStatsService.idl  libnetstats_kits.map
prebuilts/librarys/netd/: BUILD.gn
services/common/: BUILD.gn
services/common/include/: app_state_aware.h  broadcast_manager.h  clat_constants.h  dns_base_service.h  dual_stack_probe_callback.h  ffrt_timer.h  net_conn_base_service.h  net_manager_center.h  net_policy_base_service.h  net_settings.h  net_stats_base_service.h  net_vpn_base_service.h  route_utils.h  timer.h
services/common/src/: app_state_aware.cpp  broadcast_manager.cpp  net_manager_center.cpp  net_settings.cpp  route_utils.cpp
services/dnsresolvermanager/: BUILD.gn
services/dnsresolvermanager/include/: dns_resolver_service.h  dns_service_iface.h
services/dnsresolvermanager/src/: dns_resolver_service.cpp  dns_service_iface.cpp
services/etc/init/: BUILD.gn  detectionconfig.conf  initHosts  netdetectionurl.conf  netdnative.cfg  netmanager_base.cfg  netmanager_base.para  netmanager_base.para.dac  netmanager_base.rc  netmanager_trust.json  netsysnative.cfg  netsysnative.rc  netsysnative_dns_servers.para  netsysnative_trust.json  prefer_cellular_url_list.txt  resolv.conf  wearable_distributed_net_forward.json
services/netconnmanager/: BUILD.gn  connect_blocklist.txt
services/netconnmanager/include/: dns_health_call_back.h  dns_result_call_back.h  http_probe.h  http_request.h  i_net_monitor_callback.h  nat464_service.h  net_activate.h  net_caps.h  net_conn_async.h  net_conn_callback_proxy_wrapper.h  net_conn_event_handler.h  net_conn_service.h  net_conn_service_iface.h  net_conn_types.h  net_datashare_utils.h  net_dns_resolve.h  net_dual_stack_probe.h  net_factoryreset_callback.h  net_http_probe.h  net_http_probe_result.h  net_http_proxy_tracker.h  net_monitor.h  net_monitor_tracker.h  net_pac_local_proxy_server.h  net_pac_manager.h  net_proxy_userinfo.h  net_request.h  net_score.h  net_supplier.h  net_trace_route_probe.h  network.h  pac_functions.h  probe_thread.h  scheduler.h  socket_factory.h  url.h
services/netconnmanager/src/: dns_health_call_back.cpp  dns_result_call_back.cpp  http_probe.cpp  http_request.cpp  nat464_service.cpp  net_activate.cpp  net_caps.cpp  net_conn_async.cpp  net_conn_callback_proxy_wrapper.cpp  net_conn_event_handler.cpp  net_conn_service.cpp  net_conn_service_ext.cpp  net_conn_service_iface.cpp  net_datashare_utils.cpp  net_dns_resolve.cpp  net_dual_stack_probe.cpp  net_factoryreset_callback.cpp  net_http_probe.cpp  net_http_probe_result.cpp  net_http_proxy_tracker.cpp  net_monitor.cpp  net_pac_local_proxy_server.cpp  net_pac_manager.cpp  net_proxy_userinfo.cpp  net_request.cpp  net_score.cpp  net_supplier.cpp  net_trace_route_probe.cpp  network.cpp  network.cpp.rej  pac_functions.cpp  probe_thread.cpp  scheduler.cpp  url.cpp
services/netmanagernative/: BUILD.gn
services/netmanagernative/bpf/: BUILD.gn
services/netmanagernative/config/: wearable_distributed_net_forward.json
services/netmanagernative/fwmarkclient/: BUILD.gn
services/netmanagernative/include/: net_diag_callback_proxy.h  netd_native_service.h  netd_native_service_stub.h  netsys_native_service.h  netsys_native_service_stub.h
services/netmanagernative/netsys_client/: BUILD.gn  CMakeLists.txt  cfi_blocklist.txt
services/netmanagernative/src/: dhcp_controller.cpp  net_diag_callback_proxy.cpp  netd_native_service.cpp  netd_native_service_stub.cpp  netfirewall_callback_stub.cpp  netsys_native_service.cpp  netsys_native_service_stub.cpp  netsys_traffic_callback_proxy.cpp  netsys_traffic_callback_stub.cpp  notify_callback_proxy.cpp  notify_callback_stub.cpp
services/netpolicymanager/: BUILD.gn  policy_blocklist.txt
services/netpolicymanager/include/: device_idle_firewall_rule.h  firewall_rule.h  idle_deny_firewall_rule.h  net_access_policy_config.h  net_access_policy_dialog.h  net_access_policy_dialog_impl.h  net_access_policy_rdb.h  net_policy_base.h  net_policy_callback.h  net_policy_core.h  net_policy_db_clone.h  net_policy_define.h  net_policy_event_handler.h  net_policy_file.h  net_policy_file_event_handler.h  net_policy_firewall.h  net_policy_inner_define.h  net_policy_listener.h  net_policy_rule.h  net_policy_service.h  net_policy_service_common.h  net_policy_traffic.h  netsys_policy_wrapper.h  power_save_firewall_rule.h
services/netpolicymanager/src/: net_access_policy_config.cpp  net_access_policy_database.cpp  net_access_policy_dialog.cpp  net_access_policy_dialog_impl.cpp  net_policy_callback.cpp  net_policy_db_clone.cpp  net_policy_file.cpp  net_policy_firewall.cpp  net_policy_listener.cpp  (+3 more)
services/netstatslimitntf/: BUILD.gn  libnetmanager_stats_limit_notification.map
services/netstatsmanager/: BUILD.gn
services/netsyscontroller/: BUILD.gn  netsys_controller.map
services/nettethermanager/: BUILD.gn
test/netconnmanager/: BUILD.gn
utils/: BUILD.gn  CMakeLists.txt
utils/bundle_utils/: net_bundle_utils_blocklist.txt
utils/napi_utils/: BUILD.gn  napi_utils_blocklist.txt
(+1531 files in other folders)
